# ML6xGDGKUL_AIAccelerate2025

./: .gitignore  my_results.json  pyproject.toml
benchmark/: train.json
my_agent/: .local_env  agent.py
my_agent/tools/: __init__.py  file_download.py  image_ocr.py  read_block_of_text.py  read_png.py  text_processor.py  web_search.py
